--- a/presentation/src/main/res/layout/activity_movies.xml
+++ b/presentation/src/main/res/layout/activity_movies.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.MainActivity">
+    tools:context=".presentation.feature.movies.MoviesActivity">
 
     <TextView
         android:layout_width="wrap_content"
