--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 
 <resources>
 
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#01d277</color>
+    <color name="colorPrimaryDark">#081c24</color>
     <color name="colorAccent">#FF4081</color>
 
 </resources>
