--- a/presentation/src/main/res/layout/activity_movies.xml
+++ b/presentation/src/main/res/layout/activity_movies.xml
@@ -7,13 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".presentation.feature.movies.MoviesActivity">
 
-    <TextView
-        android:id="@+id/tv_movies"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/item_movie_space"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_movie"/>
 
 </android.support.constraint.ConstraintLayout>
