--- a/presentation/src/main/res/values/styles__item.xml
+++ b/presentation/src/main/res/values/styles__item.xml
@@ -23,4 +23,38 @@
         <item name="android:textSize">@dimen/text_size_20</item>
     </style>
 
+    <!-- Movie -->
+
+    <style name="ItemMovieBackdropImageView">
+        <item name="android:scaleType">fitXY</item>
+    </style>
+
+    <style name="ItemMovieTitleTextView">
+        <item name="android:background">@drawable/shape_gradient</item>
+        <item name="android:gravity">start|bottom</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="ItemMovieLinearLayout">
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingTop">8dp</item>
+    </style>
+
+    <style name="ItemMovieDetailsTextView">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="ItemMovieDetailsTextView.Left">
+        <item name="android:gravity">start|center</item>
+    </style>
+
+    <style name="ItemMovieDetailsTextView.Right">
+        <item name="android:gravity">end|center</item>
+    </style>
+
 </resources>
