--- a/presentation/src/main/res/values/dimens__item.xml
+++ b/presentation/src/main/res/values/dimens__item.xml
@@ -3,6 +3,7 @@
 <resources>
 
     <!-- Movie item dimensions and properties. -->
+    <dimen name="item_movie_backdrop_height">200dp</dimen>
     <dimen name="item_movie_margin">8dp</dimen>
     <dimen name="item_movie_space">8dp</dimen>
     <dimen name="item_movie_radius">2dp</dimen>
