[movies] feature: Add dart library for activity extra injection
This is mainly used to pass the clicked movie object from the movies
activity to the movie details activity.

--- a/presentation/src/main/res/layout/activity_movie_details.xml
+++ b/presentation/src/main/res/layout/activity_movie_details.xml
@@ -8,6 +8,7 @@
     tools:context=".presentation.feature.movies.MoviesActivity">
 
     <TextView
+        android:id="@+id/tv_movie_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Movie Details!"
