--- a/presentation/src/main/res/values/styles__toolbar.xml
+++ b/presentation/src/main/res/values/styles__toolbar.xml
@@ -18,7 +18,7 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:paddingEnd">10dp</item>
         <item name="android:paddingStart">10dp</item>
-        <item name="android:src">@drawable/ic_search</item>
+        <item name="android:src">@drawable/ic_filter</item>
     </style>
 
     <style name="ToolbarMoviesFilterYear">
