[movies] feature: Add support for infinite scrolling with paging
This commit mainly adds the following:
1) A page attribute to the api request. The movies load use case,
   repository and any other object are adjusted accordingly.
2) A pagination data common model object, an abstraction, which will be
   utilised for every model page object that required pagination.
3) An infinite recycler view, scroll listener and adapter, an
   abstraction, which will be utilised for every list that requires
   infinite scrolling.
4) Adjust movies activity and view model to the new infinite scrolling
   and paging.
5) Support for saving and restoring the toolbar's state on during a
   configuration change event.

--- a/presentation/src/main/res/layout/activity_movies.xml
+++ b/presentation/src/main/res/layout/activity_movies.xml
@@ -16,7 +16,7 @@
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintVertical_chainStyle="packed"/>
 
-    <android.support.v7.widget.RecyclerView
+    <io.petros.movies.presentation.feature.common.view.InfiniteRecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
