[movies] feature: Add movie month picker
In addition to the previous year picker, this new picker will allow us
to further filter the movies based on their release month.

--- a/presentation/src/main/res/layout/toolbar_movies.xml
+++ b/presentation/src/main/res/layout/toolbar_movies.xml
@@ -22,10 +22,18 @@
 
         <TextView
             android:id="@+id/tv_filter_year"
-            style="@style/ToolbarMoviesFilterYear"
+            style="@style/ToolbarMoviesFilterDate.Year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/toolbar_movies_filter_year"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/tv_filter_month"
+            style="@style/ToolbarMoviesFilterDate.Month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/toolbar_movies_filter_month"
             android:visibility="invisible"/>
 
     </LinearLayout>
