--- a/presentation/src/main/res/values/strings__dialog.xml
+++ b/presentation/src/main/res/values/strings__dialog.xml
@@ -4,5 +4,6 @@
 
     <!-- Movie -->
     <string name="dialog_picker_movie_year">Select Movie Year</string>
+    <string name="dialog_picker_movie_month">Select Movie Month</string>
 
 </resources>
