[movies] feature: Add shared element transition for the movie backdrop

--- a/presentation/src/main/res/layout/activity_movie_details.xml
+++ b/presentation/src/main/res/layout/activity_movie_details.xml
@@ -25,6 +25,7 @@
             style="@style/ActivityMovieBackdropImageView"
             android:layout_width="match_parent"
             android:layout_height="@dimen/activity_movie_details_backdrop_height"
+            android:transitionName="@string/movie_backdrop_shared_element"
             app:layout_constraintBottom_toTopOf="@+id/tv_movie_title"
             app:layout_constraintTop_toTopOf="@id/toolbar"
             tools:src="@android:color/darker_gray"/>
