--- a/presentation/src/main/res/layout/movies_activity.xml
+++ b/presentation/src/main/res/layout/movies_activity.xml
@@ -25,6 +25,6 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        tools:listitem="@layout/item_movie"/>
+        tools:listitem="@layout/movie_item_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
