--- a/presentation/src/main/res/layout/movie_item_view.xml
+++ b/presentation/src/main/res/layout/movie_item_view.xml
@@ -9,43 +9,43 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/iv_movie_backdrop"
+            android:id="@+id/ivMovieBackdrop"
             style="@style/ItemMovieBackdropImageView"
             android:layout_width="match_parent"
             android:layout_height="@dimen/item_movie_backdrop_height"
             android:transitionName="@string/movie_backdrop_shared_element"
-            app:layout_constraintBottom_toTopOf="@id/ll_movie_details"
+            app:layout_constraintBottom_toTopOf="@id/llMovieDetails"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@android:color/darker_gray"/>
 
         <TextView
-            android:id="@+id/tv_movie_title"
+            android:id="@+id/tvMovieTitle"
             style="@style/ItemMovieTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="@dimen/item_movie_backdrop_height"
-            app:layout_constraintBottom_toBottomOf="@id/iv_movie_backdrop"
-            app:layout_constraintTop_toTopOf="@id/iv_movie_backdrop"
-            tools:text="Avengers: Infinity War"/>
+            app:layout_constraintBottom_toBottomOf="@id/ivMovieBackdrop"
+            app:layout_constraintTop_toTopOf="@id/ivMovieBackdrop"
+            tools:text="Avengers: Infinity War" />
 
         <LinearLayout
-            android:id="@+id/ll_movie_details"
+            android:id="@+id/llMovieDetails"
             style="@style/ItemMovieLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_movie_title">
+            app:layout_constraintTop_toBottomOf="@id/tvMovieTitle">
 
             <TextView
-                android:id="@+id/tv_movie_release_date"
+                android:id="@+id/tvMovieReleaseDate"
                 style="@style/ItemMovieDetailsTextView.Left"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                tools:text="2018 (April)"/>
+                tools:text="2018 (April)" />
 
             <TextView
-                android:id="@+id/tv_movie_vote"
+                android:id="@+id/tvMovieVote"
                 style="@style/ItemMovieDetailsTextView.Right"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
