--- a/presentation/src/main/res/layout/movies_toolbar.xml
+++ b/presentation/src/main/res/layout/movies_toolbar.xml
@@ -15,20 +15,20 @@
             android:text="@string/activity_movies_name"/>
 
         <ImageView
-            android:id="@+id/iv_filter_icon"
+            android:id="@+id/ivFilterIcon"
             style="@style/ToolbarMoviesIcon.Filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <ImageView
-            android:id="@+id/iv_close_icon"
+            android:id="@+id/ivCloseIcon"
             style="@style/ToolbarMoviesIcon.Close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"/>
 
         <TextView
-            android:id="@+id/tv_filter_year"
+            android:id="@+id/tvFilterYear"
             style="@style/ToolbarMoviesFilterDate.Year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
             android:visibility="invisible"/>
 
         <TextView
-            android:id="@+id/tv_filter_month"
+            android:id="@+id/tvFilterMonth"
             style="@style/ToolbarMoviesFilterDate.Month"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
