--- a/presentation/src/main/res/layout/error_item_view.xml
+++ b/presentation/src/main/res/layout/error_item_view.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ItemStateFrameLayout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         style="@style/ItemErrorTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
-</FrameLayout>
+</merge>
