--- a/presentation/src/main/res/layout/progress_item_view.xml
+++ b/presentation/src/main/res/layout/progress_item_view.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ItemStateFrameLayout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ProgressBar
         style="@style/ItemLoadingProgressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="@dimen/spacing_l"/>
+        android:padding="@dimen/spacing_l" />
 
-</FrameLayout>
+</merge>
