[movies-16] refactor: Rename android res values based on new structure
Since the project is now on feature modules, the res value files per
module can become less complex. No need for prefixes or suffixes
anymore.

--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -22,4 +22,7 @@
     <dimen name="text_size_20">20sp</dimen>
     <dimen name="text_size_24">24sp</dimen>
 
+    <!-- Toolbar -->
+    <dimen name="toolbar_height">56dp</dimen>
+
 </resources>
