--- a/feature/splash/src/main/res/drawable/background.xml
+++ b/feature/splash/src/main/res/drawable/background.xml
@@ -5,7 +5,7 @@
     <item android:drawable="@android:color/white"/>
 
     <item
-        android:drawable="@drawable/splash_logo"
+        android:drawable="@drawable/logo"
         android:gravity="center"/>
 
 </layer-list>
