--- a/feature/splash/src/main/res/values/styles.xml
+++ b/feature/splash/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 <resources>
 
     <style name="SplashTheme" parent="AppTheme">
-        <item name="android:windowBackground">@drawable/splash_background</item>
+        <item name="android:windowBackground">@drawable/background</item>
     </style>
 
 </resources>
