--- a/feature/movies/src/main/res/values/styles.xml
+++ b/feature/movies/src/main/res/values/styles.xml
@@ -2,6 +2,38 @@
 
 <resources>
 
+    <!-- Toolbar -->
+    <style name="ToolbarMoviesIcon">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:paddingEnd">10dp</item>
+        <item name="android:paddingStart">10dp</item>
+    </style>
+
+    <style name="ToolbarMoviesIcon.Filter">
+        <item name="android:src">@drawable/ic_filter</item>
+    </style>
+
+    <style name="ToolbarMoviesIcon.Close">
+        <item name="android:src">@drawable/ic_close</item>
+    </style>
+
+    <style name="ToolbarMoviesFilterDate">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="ToolbarMoviesFilterDate.Year">
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingStart">16dp</item>
+    </style>
+
+    <style name="ToolbarMoviesFilterDate.Month">
+        <item name="android:paddingEnd">10dp</item>
+        <item name="android:paddingStart">10dp</item>
+    </style>
+
+    <!-- Item -->
     <style name="ItemMovieBackdropImageView">
         <item name="android:scaleType">fitXY</item>
     </style>
