--- a/core/src/main/res/layout/error_item_view.xml
+++ b/core/src/main/res/layout/error_item_view.xml
@@ -3,7 +3,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        style="@style/ItemErrorTextView"
+        style="@style/ErrorItemTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
