--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <!-- Toolbar -->
-    <style name="ToolbarLabel">
+    <style name="ToolbarLabelTextView">
         <item name="android:layout_gravity">center</item>
         <item name="android:paddingEnd">16dp</item>
         <item name="android:paddingStart">16dp</item>
@@ -18,12 +18,12 @@
     </style>
 
     <!-- Item -->
-    <style name="ItemLoadingProgressBar">
+    <style name="ProgressItemProgressBar">
         <item name="android:layout_gravity">center</item>
         <item name="android:padding">@dimen/spacing_l</item>
     </style>
 
-    <style name="ItemErrorTextView">
+    <style name="ErrorItemTextView">
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center</item>
         <item name="android:padding">@dimen/spacing_l</item>
