--- a/feature/movie-details/src/main/res/layout/movie_details_toolbar.xml
+++ b/feature/movie-details/src/main/res/layout/movie_details_toolbar.xml
@@ -9,7 +9,7 @@
         android:orientation="horizontal">
 
         <TextView
-            style="@style/ToolbarLabel"
+            style="@style/ToolbarLabelTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/activity_movie_details_name"/>
