--- a/feature/movies/src/main/res/layout/movies_activity.xml
+++ b/feature/movies/src/main/res/layout/movies_activity.xml
@@ -18,10 +18,9 @@
 
     <io.petros.movies.core.list.infinite.InfiniteRecyclerView
         android:id="@+id/recyclerView"
+        style="@style/RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/item_movie_space"
-        android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
