--- a/feature/movies/src/main/res/values/styles.xml
+++ b/feature/movies/src/main/res/values/styles.xml
@@ -2,43 +2,48 @@
 
 <resources>
 
+    <style name="RecyclerView">
+        <item name="android:layout_marginTop">@dimen/item_movie_space</item>
+        <item name="android:scrollbars">vertical</item>
+    </style>
+
     <!-- Toolbar -->
-    <style name="ToolbarMoviesIcon">
+    <style name="ToolbarFilterIconImageView">
         <item name="android:layout_gravity">center</item>
         <item name="android:paddingEnd">10dp</item>
         <item name="android:paddingStart">10dp</item>
-    </style>
-
-    <style name="ToolbarMoviesIcon.Filter">
         <item name="android:src">@drawable/ic_filter</item>
     </style>
 
-    <style name="ToolbarMoviesIcon.Close">
+    <style name="ToolbarCloseIconImageView">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:paddingEnd">10dp</item>
+        <item name="android:paddingStart">10dp</item>
         <item name="android:src">@drawable/ic_close</item>
     </style>
 
-    <style name="ToolbarMoviesFilterDate">
+    <style name="ToolbarFilterYearTextView">
         <item name="android:layout_gravity">center</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingStart">16dp</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20sp</item>
     </style>
 
-    <style name="ToolbarMoviesFilterDate.Year">
-        <item name="android:paddingEnd">16dp</item>
-        <item name="android:paddingStart">16dp</item>
-    </style>
-
-    <style name="ToolbarMoviesFilterDate.Month">
+    <style name="ToolbarFilterMonthTextView">
+        <item name="android:layout_gravity">center</item>
         <item name="android:paddingEnd">10dp</item>
         <item name="android:paddingStart">10dp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
     <!-- Item -->
-    <style name="ItemMovieBackdropImageView">
+    <style name="ItemBackdropImageView">
         <item name="android:scaleType">fitXY</item>
     </style>
 
-    <style name="ItemMovieTitleTextView">
+    <style name="ItemTitleTextView">
         <item name="android:background">@drawable/shape_gradient</item>
         <item name="android:gravity">start|bottom</item>
         <item name="android:padding">16dp</item>
@@ -46,24 +51,23 @@
         <item name="android:textSize">24sp</item>
     </style>
 
-    <style name="ItemMovieLinearLayout">
+    <style name="ItemDetailsLinearLayout">
         <item name="android:paddingBottom">8dp</item>
         <item name="android:paddingLeft">16dp</item>
         <item name="android:paddingRight">16dp</item>
         <item name="android:paddingTop">8dp</item>
     </style>
 
-    <style name="ItemMovieDetailsTextView">
+    <style name="ItemReleaseDateTextView">
+        <item name="android:gravity">start|center</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">18sp</item>
     </style>
 
-    <style name="ItemMovieDetailsTextView.Left">
-        <item name="android:gravity">start|center</item>
-    </style>
-
-    <style name="ItemMovieDetailsTextView.Right">
+    <style name="ItemVoteTextView">
         <item name="android:gravity">end|center</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
